add frontend,acl,servers feature

--- a/script/haproxy.cfg
+++ b/script/haproxy.cfg
@@ -1,3 +1,11 @@
+{
+  "name" : letsencrypt-backend,
+  "condition" : "if",
+  "acl" : "letsencrypt-acl",
+  "aclId" : "aWXm9iokNz"
+}
+
+
 global
     log 127.0.0.1 local0
 #   tune.ssl.default-dh-param 2048
